# sotopia-rl

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  annotator_agreement.py  binary_reward.py  create_google_forms.py  data_preprocess.py  eda.ipynb  environment.yml  example_episodes.jsonl  example_episodes_with_scores.jsonl  explore_results.ipynb  form_ids.txt  form_uris.jsonl  get_form_responses.py  openai_log_binary_reward.jsonl  openai_log_reward_attribution.jsonl  openai_log_scalar.jsonl  pad_test.py  print_uris.py  pyproject.toml  reward_attribution.py  reward_attribution_log_combined.jsonl  scaler_value.py  select_examples.py  serve_test.sh
.github/workflows/: mypy.yml  tests.yml
Untitled/: cuda_clean.py  experiment_scripts.sh  experiment_scripts_ppo.sh  experiment_scripts_self_play.sh  experiment_scripts_w_gpt.sh
Untitled/examples/: curl_baseline.py  env_agent_combo_stats.py  episode_stats.py  experiment_eval.py  redis_stat.py
Untitled/notebooks/: redis_stats.ipynb
Untitled/sotopia/: server.py
annotator/: episode_sampling.py
archive/: example_episodes_with_scores.jsonl  form_uris.jsonl  openai_log_reward_attribution.jsonl
data/: EDA.ipynb  EDA_attr.ipynb  EDA_uttr.ipynb  dataset_info.json  env_ids.txt  explore.ipynb  explore_3_24.ipynb  form_ids.txt  gpt35_gpt4_prompt_response_pairs.json  sotopia_pi_gpt4_rm_overfit.json  sotopia_pi_utterance_reward.json  sotopia_pi_utterance_reward_toy.json  sotopia_pi_utterance_reward_toy_.json  sotopia_rm_format_convert.py
data/final_rewards/: explore_final_rewards.ipynb
evals/: README.md  dump.rdb  experiment_eval.py  gemma-2-2b-it.jinja  grpo_serving.sh  haofei_eval_commands.sh  jason_eval_commands.sh  mistral-instruct.jinja  ppo_serving.sh  qwen2.5-7b.jinja  redis_check.py  redis_stat.py  rej_sampling_all_serving.sh  rej_sampling_num1.sh  rej_sampling_num10.sh  rej_sampling_num20.sh  rej_sampling_num5.sh  rej_sampling_serving.sh  rm_infer.py  self_play.sh  sft_serving.sh  sotopia_eval.py  sotopia_eval.sh
evals/judge_model_ablation/: calc_reevaluated_scores.py  curl_baseline.py  curl_sft.py  google_test.py  redis_stat.py  reevaluate_episodes.py  reevaluate_episodes_28.py  together_test.py
evals/sotopia_conf/: gin_utils.py  server.py
examples/accelerate/: single_config.yaml
examples/inference/: llama3_lora_sft.yaml
examples/lora_single_gpu/: llama3_lora_sotopia_rm.yaml  mistral_lora_sotopia_rm.yaml
examples/lora_sotopia/: gemma_lora_sotopia_ppo.yaml  gemma_lora_sotopia_ppo_rm_baseline.yaml  gemma_lora_sotopia_ppo_rm_direct.yaml  gemma_lora_sotopia_ppo_rm_key.yaml  gemma_lora_sotopia_rloo.yaml  gemma_lora_sotopia_rm.yaml  gemma_lora_sotopia_sft.yaml  llama3_lora_sotopia_ppo.yaml  llama3_lora_sotopia_reinforce.yaml  llama3_lora_sotopia_rm.yaml  llama3_lora_sotopia_rm_key_utter.yaml  llama3_lora_sotopia_rm_predict.yaml  mistral_lora_sotopia_reinforce.yaml  mistral_lora_sotopia_rloo.yaml  mistral_lora_sotopia_rloo_ds.yaml  mistral_lora_sotopia_rm.yaml  mistral_lora_sotopia_rm_key_utter.yaml  mistral_lora_sotopia_sft.yaml  mistral_lora_sotopia_sft_ds.yaml
human_annotate/: create_google_forms.py
notebooks/: explore_attribution_reward_results.ipynb
prompter/: attribution_methods.py  direct_attribution_function.py  direct_attribution_generic_function.py  direct_attribution_normalized_function.py  key_utterance_function.py  one_pass_instructions.py  only_response_attribution_function.py  preference_data_prompting.py  utterance_quality_attribution_normalized_function.py
scripts/: accelerate_config.yaml  accelerate_config_grpo.yaml  accelerate_config_ppo.yaml  accelerate_config_ppo2.yaml  accelerate_config_rm.yaml  accelerate_config_sft.yaml  check_ppo.py  clean_reward_data.py  convert.py  ds_config_ppo.json  ds_config_rm.json  ds_config_sft.json  inference_grpo.sh  inference_ppo.py  inference_ppo.sh  inference_rm.py  inference_rm.sh  inference_sft.py  inference_sft.sh  ppo_train.sh  rm_train.sh  self_play.sh  sft_train.sh  simple_ppo_train.sh  test_episode_num.py  train_grpo.py  train_grpo.sh  train_ppo.py  train_ppo.sh  train_rm.py  train_rm.sh  train_rm_with_valuehead.py  train_rm_with_valuehead.sh  train_sft.py  train_sft.sh
scripts/annotate/: attribution_scripts_4_20.sh  create_forms_by_sampling_episodes.py  db_free_reverse_engineering.py  direct_attribution_instructions.py  episode_utils.py  experiment_scripts.sh  experiment_scripts_3_24.sh  generate_auto_key_utterance_identification.py  generate_auto_reward_attribution.py  get_sample_annotations_by_form_ids.py  merge_rewards.ipynb  post_process_annotation.py  post_process_annotation_direct_attribution.py  post_process_annotation_mix.py  post_process_annotation_rm.py  print_form_uris.py  process_sotopia_pi.py  sample_episodes_and_annotate.py
scripts/data_process/: data_filtering.py  db_free_data_filtering.py  db_free_reverse_engineering.py  generate_conversations.py  generate_sft_from_episodes.py  process_annotation_baseline.py  process_annotation_direct_attribution.py  process_annotation_key_uttrs.py  prompt_reverse_engineering.py  reverse_engineering.py  serialize.py  sotopia_all_eval_script.sh  (+3 more)
serves/: db.sqlite3  manage.py  serve_test.sh
sotopia-rl/: data.py  rejection_sampler.py  run_rejection_sampler.sh  train_ppo.py  train_rm.py  train_sft.py
sotopia_rl/: __init__.py  data.py  grpo_trainer.py  grpo_trainer_math.py  ppo_trainer.py  ppo_trainer_src.py  ppo_trainer_src_ori.py  rm_trainer.py  rm_with_valuehead_trainer.py  sft_trainer.py  train_ppo.py  train_rm.py  train_sft.py
src/: annotator_agreement.py  attribution_prompting.py  attribution_prompting_human_correlation.py  attribution_score_labeling.py  binary_reward.py  explore_results.ipynb  get_example_episodes_from_form_ids.py  get_form_responses.py  google_form_api_wrapper.py  key_utterance_human_correlation.py  key_utterance_prompting.py  reward_attribution.py  sample_qualified_episodes.py  scalar_value.py  train.py  utils.py
stubs/: jsonlines.pyi
utils/: correlation.py  episode_preprocess.py  fleiss_kappa.py  goal_score_extract.py  openai_call.py  preprocess.py
(+216 files in other folders)
