[tool.poetry]
name = "sotopia-rl"
version = "0.0.1"
description = "Online RL framework for sotopia social agents."
authors = ["Haofei Yu <yuhaofei44@gmail.com>"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <3.12"
mypy = "^1.8.0"
pydantic = "^2.0"
datasets = "^1.12.0"
openai = "^1.20.0"
types-tqdm = "^4.61.0"
rich = "^13.7.0"
pandas-stubs = "^2.2.0"
# Add your other dependencies here
deepspeed = {version = ">=0.10.0", optional = true}
bitsandbytes = {version = "^0.39.0", optional = true}
vllm = {version = ">=0.4.0", optional = true}
galore-torch = {version = "*", optional = true}
badam = {version = "*", optional = true}
optimum = {version = ">=1.16.0", optional = true}
auto-gptq = {version = ">=0.5.0", optional = true}
autoawq = {version = "*", optional = true}
aqlm = {version = "^1.1.0", optional = true}
tiktoken = {version = "^0.6.0", optional = true}
transformers_stream_generator = {version = "*", optional = true}
modelscope = {version = "*", optional = true}
ruff = {version = "*", optional = true}

[tool.poetry.extras]
metrics = ["nltk", "jieba", "rouge-chinese"]
deepspeed = ["deepspeed"]
bitsandbytes = ["bitsandbytes"]
vllm = ["vllm"]
galore = ["galore"]
badam = ["badam"]
gptq = ["gptq"]
awq = ["awq"]
aqlm = ["aqlm"]
qwen = ["tiktoken", "transformers_stream_generator"]
modelscope = ["modelscope"]
quality = ["ruff"]


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbmake = "*"
types-setuptools = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
strict = true
plugins = [
    "pydantic.mypy"
]
exclude = [
    'src/llmtuner'
]

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
