[tool.poetry]
name = "sotopia-rl"
version = "0.0.1"
description = "Online RL framework for sotopia social agents."
authors = ["Haofei Yu <yuhaofei44@gmail.com>", "Zhengyang Qi <jasonqi146@gmail.com>"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mypy = "^1.8.0"
pydantic = "^1.10.0"
types-tqdm = "^4.61.0"
openai = "^1.35.13"
rich = "^13.7.0"
pandas-stubs = "^2.2.0"
google-api-python-client = "^2.137.0"
oauth2client = "^4.1.3"
msgpack = "^1.0.8"
setuptools = "*"
torch = "^2.2.1"
trl = ">=0.9.6"
transformers = ">=4.41.2"
peft = "0.11.1"
datasets = "2.20.0"
gradio = "4.32.0"
langchain = "0.1.20"
langchain-community = "0.0.38"
sentencepiece = "*"

deepspeed = {version = ">=0.10.0", optional = true}
bitsandbytes = {version = "^0.43.1", optional = true}
galore-torch = {version = "*", optional = true}
badam = {version = "*", optional = true}
optimum = {version = ">=1.16.0", optional = true}
auto-gptq = {version = ">=0.5.0", optional = true}
autoawq = {version = "*", optional = true}
aqlm = {version = "^1.1.0", optional = true}
tiktoken = {version = "^0.7.0", optional = true}
transformers_stream_generator = {version = "*", optional = true}
modelscope = {version = "*", optional = true}
ruff = {version = "*", optional = true}
sotopia = {version = "^0.1.0-rc1", optional = true}


[tool.poetry.extras]
metrics = ["nltk", "jieba", "rouge-chinese"]
deepspeed = ["deepspeed"]
bitsandbytes = ["bitsandbytes"]
galore = ["galore"]
badam = ["badam"]
gptq = ["gptq"]
awq = ["awq"]
aqlm = ["aqlm"]
qwen = ["tiktoken", "transformers_stream_generator"]
modelscope = ["modelscope"]
quality = ["ruff"]
eval = ["gin-config", "sotopia"]

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbmake = "*"
types-setuptools = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["saves", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.codespell]
ignore-words-list = "dout, te, indicies, astroid"
skip = ["data"]

[tool.isort]
profile = "black"
use_parentheses = true
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
fix = true
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
