[tool.poetry]
name = "sotopia_rl"
version = "0.0.1"
description = "Online RL framework for sotopia social agents."
authors = ["Haofei Yu <yuhaofei44@gmail.com>", "Zhengyang Qi <jasonqi146@gmail.com>"]
license = "MIT License"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
mypy = "^1.8.0"
pydantic = "^2.9"
types-tqdm = "^4.61.0"
openai = "^1.35.13"
rich = "^13.7.0"
pandas-stubs = "^2.2.0"
msgpack = "^1.0.8"
setuptools = "^74.1.1"
torch = "^2.4.0"
trl = "*"
peft = ">=0.11.1"
datasets = "2.20.0"
sentencepiece = "*"
bitsandbytes = "*"
wandb = "*"
accelerate = "0.34.2"

ruff = {version = "*", optional = true}
vllm = {version = "=0.6.2", optional = true}
sotopia = {version = "*", optional = true}

djangorestframework = {version = "*", optional = true}
django = {version = "*", optional = true}

[tool.poetry.extras]
metrics = ["nltk"]
quality = ["ruff"]
eval = ["gin-config", "vllm", "sotopia"]
server = ["djangorestframework", "django"]

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbmake = "*"
types-setuptools = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["saves", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.codespell]
ignore-words-list = "dout, te, indicies, astroid"
skip = ["data"]

[tool.isort]
profile = "black"
use_parentheses = true
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
fix = true
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
